--- a/app/src/main/res/layout/fragment_wallet_loan_preview_request.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_preview_request.xml
@@ -179,6 +179,7 @@
                         android:textSize="18sp" />
 
                     <TextView
+                        android:id="@+id/loan_purpose_txt"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.5"
